add weather to status bar using open weather api

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -26,7 +26,16 @@
 # Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
+separator=false
 markup=none
+
+
+# Weather
+[weather]
+command=~/.config/i3/scripts/weather/openweather.sh
+interval=1800
+color=#676E7D
+
 
 # Volume indicator
 #
