--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -24,26 +24,21 @@
 #
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
+command=~/.config/i3/scripts/i3blocks/$BLOCK_NAME
 separator_block_width=15
 separator=false
 markup=none
-
+color=#676E7D
 
 # Weather
 [weather]
-command=~/.config/i3/scripts/weather/openweather.sh
 interval=600
-color=#676E7D
+#command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] | gnome-calendar &
 
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
+#command=[[ -z "${BLOCK_BUTTON}" ]] || ( [[ "${BLOCK_BUTTON}" == "1" ]] && ((/usr/bin/pavucontrol -t 3 --name "pavucontrol-bar" || true) && $HOME/scripts/volume_control.py signal) || $HOME/scripts/volume_control.py toggle ); $HOME/scripts/volume_control.py i3blocks
+
 [volume]
-#label=VOL
 label=♪
 instance=Master
 #instance=PCM
@@ -81,17 +76,16 @@ separator=false
 #
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-#[iface]
-#instance=wlan0
-#color=#00FF00
-#interval=10
-#separator=false
-
-[wifi]
-#instance=wlp3s0
+[iface]
+instance=wlan0
+color=#00FF00
 interval=10
 separator=false
-color=#676E7D
+
+[wifi]
+instance=wlp3s0
+interval=10
+separator=false
 
 #[bandwidth]
 #instance=eth0
@@ -114,33 +108,27 @@ color=#676E7D
 #
 # The battery instance defaults to 0.
 [battery]
-#label=BAT
 label=
-#label=⚡
 #instance=1
 interval=30
-color=#676E7D
-separator=false
 
 # Date Time
 
 [date]
-#label=📆
-separator=false
 label=
 command=date '+%a %d %b'
 interval=30
-color=#676E7D
-
 
 [time]
 label=
-#label=🕘
 command=date '+%H:%M %p'
 interval=1
-color=#676E7D
 
-#command=date '+%a %d.%m.%Y %H:%M:%S'
+[exit_button]
+full_text=
+interval=0
+command=echo ""; [[ -z "${BLOCK_BUTTON}" ]] || ~/.config/i3/scripts/exit_menu/exit.sh
+color=white
 
 
 # Generic media player support
