--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -82,10 +82,12 @@ color=#00FF00
 interval=10
 separator=false
 
-[wifi]
-instance=wlp3s0
-interval=10
-separator=false
+#[wifi]
+#interval=0
+#full_text=wifi
+#instance=wlp3s0
+#interval=10
+#separator=false
 
 #[bandwidth]
 #instance=eth0
@@ -125,9 +127,9 @@ command=date '+%H:%M %p'
 interval=1
 
 [exit_button]
-full_text=
+full_text=
 interval=0
-command=echo ""; [[ -z "${BLOCK_BUTTON}" ]] || ~/.config/i3/scripts/exit_menu/exit.sh
+command=echo ""; [[ -z "${BLOCK_BUTTON}" ]] || ~/.config/i3/scripts/exit_menu/exit.sh
 color=white
 
 
