pimp volume script and improve gitignore

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -30,6 +30,10 @@ separator=false
 markup=none
 color=#676E7D
 
+#GPU Load
+[gpu]
+interval=1
+
 # Weather
 [weather]
 interval=600
@@ -39,14 +43,12 @@ interval=600
 #command=[[ -z "${BLOCK_BUTTON}" ]] || ( [[ "${BLOCK_BUTTON}" == "1" ]] && ((/usr/bin/pavucontrol -t 3 --name "pavucontrol-bar" || true) && $HOME/scripts/volume_control.py signal) || $HOME/scripts/volume_control.py toggle ); $HOME/scripts/volume_control.py i3blocks
 
 [volume]
-label=♪
+#label=♪
 instance=Master
 #instance=PCM
 interval=1
 signal=10
-command=/usr/share/i3blocks/volume 5 pulse
-color=#676E7D
-separator=false
+command=~/.config/i3/scripts/i3blocks/volume 5 pulse
 
 # Memory usage
 #
