change battery function

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -133,7 +133,7 @@ bindsym $mod+u focus parent
 set $ws1 "1"
 set $ws2 "2: Pycharm"
 set $ws3 "3: Firefox "
-set $ws4 "4: >_"
+set $ws4 "4: "
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
