--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -112,9 +112,9 @@ separator=false
 #
 # The battery instance defaults to 0.
 [battery]
-label=
+#label=
 #instance=1
-interval=30
+interval=1
 
 # Date Time
 
@@ -127,6 +127,10 @@ interval=30
 label=
 command=date '+%H:%M %p'
 interval=1
+
+[bluetooth]
+interval=1
+#color=white
 
 [exit_button]
 full_text=
